--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
     "fxjs": "^0.21.3",
     "nightmare": "^3.0.2",
+    "ramda": "^0.28.0",
     "vo": "^4.0.2"
   },
-  "type": "module"
+  "type": "commonjs"
 }
